# doctown-v15

./: .env.example  .gitignore  dev.sh  docpack_docs.docpack  pyproject.toml
docpack/: __init__.py  answer.py  chunk.py  cli.py  embed.py  recall.py  runtime.py  serve.py  summarize.py  vision.py  web.py
docpack/extract/: __init__.py  audio.py  base.py  docx.py  image.py  pdf.py  pptx.py  speech.py
docpack/ingest/: __init__.py  freeze.py  sources.py  vfs.py
docpack/storage/: __init__.py  chunks.py  connection.py  files.py  images.py  marginalia.py  metadata.py  schema.py  vectors.py
docpack/tools/: __init__.py  grep.py  query.py  regex.py  summarize.py
docpack/workflow/: __init__.py  executor.py  llm.py  planner.py
doctown_website/: .env.example  package-lock.json  package.json  svelte.config.js  vite.config.ts
doctown_website/src/: app.css  app.html
doctown_website/src/lib/: index.ts
doctown_website/src/lib/components/: LoginGate.svelte  UploadGate.svelte
doctown_website/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
