[project]
name = "doctown"
version = "15.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.22.0",
    "sentence-transformers>=5.1.2",
    "textual>=6.6.0",
    "textual-dev>=1.8.0",
    "textual-serve>=1.1.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-json>=0.24.8",
    "tree-sitter-yaml>=0.7.2",
    "tree-sitter-toml>=0.7.0",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-css>=0.25.0",
    "tree-sitter-bash>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-markdown>=0.5.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "ollama>=0.6.1",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pillow>=11.0.0",
    "librosa>=0.10.0",
    "panns-inference>=0.1.0",
    "crepe>=0.0.16",
    "tensorflow>=2.15.0",
    # Speech transcription (Distil-Whisper)
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.30.0",
]

[project.scripts]
docpack = "docpack.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docpack"]
